--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.8.0
+  cloud_firestore: ^4.4.5
+  firebase_storage: ^11.0.16
+  image_picker: ^0.8.7+1
+  permission_handler: ^10.4.3
+  stacked: 2.1.0
+  awesome_dialog: 2.0.0
+  
 
 dev_dependencies:
   flutter_test:
